tests/errors/missing_val_56/e7.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@a

ADD LF@a int@5 LF@a

